pkg/ibmvpc/examples/out/explain_out/multiVPCVsiToExternal_all_vpcs_explain_detail.txt
Explaining connectivity from test-vpc0-ky/vsi1-ky to 172.217.22.46/32 within test-vpc0-ky
Interpreted source: vsi1-ky[10.240.1.4]
Interpreted destination: 172.217.22.46/32 (external)
=========================================================================================

Connections from vsi1-ky[10.240.1.4] to Public Internet 172.217.22.46/32: All Connections

Path:
	vsi1-ky[10.240.1.4] -> security group sg1-ky -> subnet1-ky -> network ACL acl1-ky -> 
	PublicGateway public-gw1-ky -> 
	Public Internet 172.217.22.46/32


Details:
~~~~~~~~
Path is enabled; The relevant rules are:
	Egress:
		security group sg1-ky allows connection with the following allow rules
			index: 1, direction: outbound,  conns: protocol: all, remote: 0.0.0.0/0, local: 0.0.0.0/0
		network ACL acl1-ky allows connection with the following allow rules
			index: 0, direction: outbound , src: 10.240.1.0/24 , dst: 172.217.22.46/32, conn: all, action: allow

TCP response is enabled; The relevant rules are:
	Ingress:
		network ACL acl1-ky allows connection with the following allow rules
			index: 4, direction: inbound , src: 172.217.22.46/32 , dst: 10.240.1.0/24, conn: all, action: allow

------------------------------------------------------------------------------------------------------------------------
